Refactor protocol handling and streamline version registries.
Introduced support for protocol versions 1.21 through 1.21.7, consolidating logic and removing redundant code. Adjusted packet structure to accommodate version-specific changes, updated registries for flexibility, and optimized path execution by simplifying jump logic.